# astro-reason

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  cp_local_search_stereo_insertion-audit.md  pixi.toml  pyproject.toml  pytest.ini  regional_coverage_celf_submodular-audit.md
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: brahe_skill_sync.md
.github/workflows/: benchmark-repro.yml  brahe-skill-sync.yml  ci.yml  i18n-sync.yml  sync-datasets.yml
benchmarks/: __init__.py  finished_benchmarks.json
benchmarks/aeosbench/: generator.py
benchmarks/aeossp_standard/: README.md  SPEC.md  __init__.py  splits.yaml
benchmarks/latency_optimization/: README.md  verifier.py
benchmarks/regional_coverage/: README.md  SPEC.md  schema.py  verifier.py
benchmarks/satnet/: README.md  (+3 more)
docs/: benchmark_contract.md  experiment_contract.md  runtime_contract.md  solver_contract.md
scripts/: BRAHE_SKILL.md  DATASET_CARD.md  check_finished_benchmark_repro.py  check_i18n_sync.py  dataset_card.md  generate_brahe_skill.py  render_brahe_skill_pr_body.py  upload_benchmark_datasets.py  validate_benchmark_contract.py  validate_solver_contract.py
solvers/: finished_solvers.json
tests/: test_benchmark_contract_scripts.py  test_chain_latency.py  test_check_i18n_sync.py  test_generate_brahe_skill.py  test_mcp_server.py  test_mcp_server_satnet.py  test_satnet_state.py  test_scenario.py  test_scenario_satnet.py  test_scorer_satnet.py  test_simulation_precision.py  test_solver_contract_scripts.py  test_strip_accessibility.py  test_strip_attitude.py
(+1623 files in other folders)
