[project]
name = "astroreasonbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "brahe>=1.3.4",
    "datasets>=4.8.4",
    "huggingface-hub>=1.10.2",
    "kagglehub[pandas-datasets]>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pyyaml>=6.0.3",
    "pytest>=9.0.3",
    "skyfield>=1.54",
    "shapely>=2.1.2",
    "pyproj>=3.7.2",
]
